--- a/vue/src/styles/index.scss
+++ b/vue/src/styles/index.scss
@@ -11,6 +11,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
+  overflow-y: auto;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 a {
